@@ -34,7 +34,9 @@ class GUI_API_EXPORT AboutDialog : public QDialog
         Ui::AboutDialog *ui = nullptr;
         QStringList indexContents;
         QString licenseContents;
-        QAction* copyAct = nullptr;
+
+    private slots:
+        void copy();
 };
 
 #endif // ABOUTDIALOG_H
